--- a/tool/src/webapp/content/css/scss/_typography.scss
+++ b/tool/src/webapp/content/css/scss/_typography.scss
@@ -31,7 +31,6 @@
   .matrix {
     legend {
       font-weight: normal;
-      font-size: 90%;
       color: #000;
     }
   }
